--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Rubik:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 *,
 *::after,
 *::before {
@@ -9,18 +9,19 @@
   list-style-type: none;
 }
 :root {
-  --font-primary: 'Poppins', sans-serif;
-  --font-secondry: 'Rubik', sans-serif;
+  --font-primary: 'Rubik', sans-serif;
   --text-dark: hsl(220, 33%, 11%);
   --normal: 400;
   --semibold: 500;
   --bold: 700;
   --font-default: 1.6rem;
   --primary: hsl(257, 81%, 58%);
+  --bg-primary: hsl(241, 76%, 63%);
   --white: hsl(0, 0%, 100%);
   --container: 150rem;
   --nav: 6rem;
   --m-auto: 0 auto;
+  --box-shadow-default: 0 0 0.5rem 0.1rem hsla(0, 0%, 25%, 0.2);
 }
 html {
   scroll-behavior: smooth;
@@ -28,6 +29,7 @@ html {
 }
 body {
   font-family: var(--font-primary);
+  color: var(--text-dark);
 }
 a,
 p,
@@ -40,10 +42,39 @@ select {
 }
 a {
   color: var(--text-dark);
-  font-family: var(--font-secondry);
+  font-family: var(--font-primary);
   font-weight: var(--semibold);
 }
-
+div {
+  font-size: var(--font-default);
+}
+.heading {
+  font-size: 4rem;
+}
+.subheading {
+  font-size: 3rem;
+}
+.text-center {
+  text-align: center;
+}
+.text-white {
+  color: var(--white);
+}
+.d-grid {
+  display: grid;
+}
+.d-flex {
+  display: flex;
+}
+.align-center {
+  align-items: center;
+}
+.jsc-sb {
+  justify-content: space-between;
+}
+.jsc-c {
+  justify-content: center;
+}
 .container {
   max-width: var(--container);
   margin: var(--m-auto);
@@ -56,3 +87,42 @@ a {
   color: var(--white);
   background: var(--primary);
 }
+/* Home-section-start */
+header {
+  box-shadow: var(--box-shadow-default);
+  background: var(--white);
+}
+.navigation {
+  height: var(--nav);
+}
+.nav_list {
+  display: inline-block;
+  margin: 0 1rem;
+}
+.nav_link {
+  padding: 0.4rem 1rem;
+}
+.home {
+  max-height: 67rem;
+  height: 100vh;
+  background: rgb(245, 245, 245);
+}
+.hero-contant {
+  height: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
+}
+/* Home-section-end */
+/* Service-section-start */
+.service {
+  padding: 2rem 0;
+}
+.service-items {
+  padding-top: 3rem;
+  gap: 1.3rem;
+  grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
+}
+.service-item {
+  box-shadow: 0 0 0.2rem 0.1rem rgb(223, 223, 223);
+  padding: 2rem;
+}
+/* Service-section-end */
