--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,14 @@ header {
   gap: 3rem;
   grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
 }
+.Name {
+  margin-top: 2rem;
+  font-size: 3rem;
+}
+.job-title {
+  padding: 1rem 0;
+  font-size: 2rem;
+}
 .about-heading {
   position: relative;
   margin-left: 4rem;
@@ -346,3 +354,29 @@ header {
   border-radius: 0.3rem;
 }
 /* About-section-end */
+
+/* project-section-start */
+.project {
+  padding: 4rem 0;
+}
+.project-link {
+  display: inline-block;
+  padding: 0.4rem 1.5rem;
+  margin: 0 1rem;
+}
+.Project-items {
+  margin-top: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+}
+.project-item {
+  width: 29rem;
+  height: 35rem;
+  background: var(--white);
+  box-shadow: var(--box-shadow-default);
+  float: left;
+  /* margin-right: 3rem; */
+}
+/* project-section-end */
