--- a/css/style.css
+++ b/css/style.css
@@ -391,7 +391,7 @@ header {
   height: 25rem;
 }
 .project-title {
-  padding: 1rem;
+  padding: 2rem 1rem;
 }
 .projct-back-part {
   position: absolute;
