--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ header {
 .project-item {
   max-width: 29rem;
   width: 100%;
-  height: 35rem;
+  height: 37rem;
   background: var(--white);
   box-shadow: var(--box-shadow-default);
   float: left;
@@ -411,10 +411,10 @@ header {
 .project-item:hover > .projct-back-part {
   transform: scale(1);
   width: 100%;
-  height: 100%;
+  height: 80%;
   top: 0;
   left: 0;
-  bottom: 0;
+  bottom: 50px;
   right: 0;
 }
 .projct-back-part i {
