--- a/css/style.css
+++ b/css/style.css
@@ -386,9 +386,9 @@ header {
   overflow: hidden;
 }
 .project-image {
-  object-fit: cover;
   width: 100%;
   height: 30rem;
+  object-fit: contain;
 }
 .project-title {
   padding: 2rem 1rem;
@@ -411,7 +411,7 @@ header {
 .project-item:hover > .projct-back-part {
   transform: scale(1);
   width: 100%;
-  height: 80%;
+  height: 30rem;
   top: 0;
   left: 0;
   bottom: 50px;
